--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,4 +1,8 @@
 /* Products Index */
+#products-grid .card:hover {
+    transform: scale(1.05);
+}
+
 #products-grid .card-title {
     font-size: 1.2rem
 }
