--- a/public/css/products.css
+++ b/public/css/products.css
@@ -45,10 +45,11 @@
 
 #product-info h5 {
     font-size: 1.125rem;
-    margin: 0 0 20px 0;
+    margin: 0 0 30px 0;
 }
 
-#product-info h6 {
+#product-info h6,
+#product-info p {
     font-size: 0.9rem;
     margin: 0 0 10px 0;
 }
