--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,4 +1,8 @@
 /* Products Index */
+#products-grid .card-container {
+    padding: 0 15px 30px 15px;
+}
+
 #products-grid .card:hover {
     transform: scale(1.05);
 }
