--- a/public/css/products.css
+++ b/public/css/products.css
@@ -22,7 +22,7 @@
 }
 
 #product-page button.back {
-    margin-right: 15px;
+    /* margin-right: 15px; */
     border-radius: 0;
     height: 100%;
 }
